Making webpage more readable..

--- a/statPlots.oct2015/index.html
+++ b/statPlots.oct2015/index.html
@@ -1,40 +1,65 @@
-<img src="birthYear.png  " alt="">
 
+
+  <h2>
+    --------- Time lag between sending and claiming invite
+  </h2> (L: all ;  R: time lag only in first hr)
 <p>
-
-<img src="claimedMinusSent_inviteTimes.png" alt="">
-
-<p>
-
-<img src="claimedMinusSent_inviteTimes.png" alt="">
-<p>
-
+  
 <img src="claimedMinusSent_inviteTimes.png" alt="">
 <p>
 
-<img src="claimedTimeMinusSentTime.png" alt="">
+  <h2>
+    --------- Time lag between sending and claiming invite, cumulative
+  </h2> (L: all ;  R: time lag only in first hr)
+  
 <p>
-
+  
 <img src="claimedTimeMinusSentTimeCumeVersion.png" alt="">
 <p>
 
-<img src="cumeSumHistos_claimedMinusSent_inviteTimes.png" alt="">
+   <h2>
+      --------- Which clinic sent invites      
+  </h2> (L: name ;  R: percentage )  
 <p>
-
+  
 <img src="senderClinic.oct2015.png" alt="">
 <p>
 
+     <h2>
+      --------- Which clinic sent invites including only claimed invites     
+  </h2> (L: name ;  R: percentage )  
+<p>
+  
 <img src="senderClinics.OnlyClaimed.png" alt="">
 <p>
 
-
+   <h2>
+      --------- Which clinic sent invites, only including ones sent POST-Sept 1     
+  </h2> (L: name ;  R: percentage )  
+<p>
+  
 <img src="senderClinics.claimedPostSep1.png">
 <p>
 
+     <h2>
+      --------- Which clinic sent invites, only including ones sent PRE-Sept 1     
+  </h2> (L: name ;  R: percentage )  
+<p>
+  
 <img src="senderClinics.preSep1.png">
 <p>
 
+     <h2>
+       --------- Sent invites broken down by gender       
+  </h2> (L: gender ;  R: percentage )  
+<p>
+  
 <img src="userGender.png">
+<p>
+
+       <h2>
+       --------- Sent invites broken down by type of invite       
+  </h2> (L: type: 0 = Famtree, 1 = Admin, 2 = Intake ;  R: percentage )  
 <p>
 
 <img src="userType.png">
@@ -45,6 +70,8 @@
 <p>
 
 
+<!--
+<img src="birthYear.png  " alt="">
 
-
-
+<p>
+-->
