--- a/statPlots.oct2015/index.html
+++ b/statPlots.oct2015/index.html
@@ -4,15 +4,18 @@
     --------- Time lag between sending and claiming invite
   </h2> (L: all ;  R: time lag only in first hr)
 <p>
+  <i> (Made by oct_clmtimePlots.R , 10.26.2015) </i>
   
 <img src="claimedMinusSent_inviteTimes.png" alt="">
 <p>
 
+  
   <h2>
     --------- Time lag between sending and claiming invite, cumulative
   </h2> (L: all ;  R: time lag only in first hr)
   
 <p>
+  <i> (Made by oct_clmtimePlots.R , 10.26.2015) </i>
   
 <img src="claimedTimeMinusSentTimeCumeVersion.png" alt="">
 <p>
@@ -70,8 +73,23 @@
 <p>
 
 
-<!--
+  <h2>
+    --------- Birth Year    
+  </h2> 
+<p>
+  <i> (Made by oct_healthProfileStats.R , 10.26.2015) </i>
+  
 <img src="birthYear.png  " alt="">
 
 <p>
--->
+
+  <hr>
+
+Probs:
+
+<ul>
+  
+  <li> Appt times are looking very weird
+<li> Parsing conditions string
+</ul>
+  
