Added funnel fig.

--- a/statPlots.oct2015/index.html
+++ b/statPlots.oct2015/index.html
@@ -4,9 +4,10 @@
     --------- Time lag between sending and claiming invite
   </h2> (L: all ;  R: time lag only in first hr)
 <p>
-  <i> (Made by oct_clmtimePlots.R , 10.26.2015) </i>
   
 <img src="claimedMinusSent_inviteTimes.png" alt="">
+<p>
+  <i> (Made by oct_clmtimePlots.R , 10.26.2015) </i>
 <p>
 
   
@@ -15,9 +16,10 @@
   </h2> (L: all ;  R: time lag only in first hr)
   
 <p>
-  <i> (Made by oct_clmtimePlots.R , 10.26.2015) </i>
   
 <img src="claimedTimeMinusSentTimeCumeVersion.png" alt="">
+<p>
+  <i> (Made by oct_clmtimePlots.R , 10.26.2015) </i>
 <p>
 
    <h2>
@@ -26,20 +28,29 @@
 <p>
   
 <img src="senderClinic.oct2015.png" alt="">
+ 
+<p>
+  <i> (Made by oct_clinicInfo.R , 10.26.2015) </i>
 <p>
 
      <h2>
       --------- Which clinic sent invites including only claimed invites     
   </h2> (L: name ;  R: percentage )  
 <p>
-  
+    
 <img src="senderClinics.OnlyClaimed.png" alt="">
+ 
+<p>
+  <i> (Made by oct_clinicInfo.R , 10.26.2015) </i>
 <p>
 
    <h2>
       --------- Which clinic sent invites, only including ones sent POST-Sept 1     
   </h2> (L: name ;  R: percentage )  
 <p>
+  
+<p>
+  <i> (Made by oct_clinicInfo.R , 10.26.2015) </i>
   
 <img src="senderClinics.claimedPostSep1.png">
 <p>
@@ -48,8 +59,12 @@
       --------- Which clinic sent invites, only including ones sent PRE-Sept 1     
   </h2> (L: name ;  R: percentage )  
 <p>
+
   
 <img src="senderClinics.preSep1.png">
+ 
+<p>
+  <i> (Made by oct_clinicInfo.R , 10.26.2015) </i>
 <p>
 
      <h2>
@@ -58,31 +73,49 @@
 <p>
   
 <img src="userGender.png">
-<p>
 
+  <p>
+    <i> (Made by oct_userInfo.R , 10.26.2015) </i>    
+<p>
        <h2>
        --------- Sent invites broken down by type of invite       
   </h2> (L: type: 0 = Famtree, 1 = Admin, 2 = Intake ;  R: percentage )  
 <p>
 
 <img src="userType.png">
+
+<p>
+  <i> (Made by oct_userInfo.R , 10.26.2015) </i>
+
 <p>
 
-
-<img src="">
-<p>
 
 
   <h2>
     --------- Birth Year    
   </h2> 
 <p>
-  <i> (Made by oct_healthProfileStats.R , 10.26.2015) </i>
+
   
 <img src="birthYear.png  " alt="">
-
+  
+<p>
+  <i> (Made by oct_healthProfileStats.R , 10.26.2015) </i>
 <p>
 
+
+  <h2>
+    --------- Invited to Completed Funnel 
+  </h2> 
+<p>
+
+<img src="invitedToCompletedFunnel.png" alt="">
+
+<p>
+  <i> (Made by oct_userInfo.R , 10.28.2015) </i>
+<p>
+
+  
   <hr>
 
 Probs:
@@ -90,6 +123,6 @@ Probs:
 <ul>
   
   <li> Appt times are looking very weird
-<li> Parsing conditions string
+  <li> Parsing conditions string
 </ul>
   
