--- a/statPlots.oct2015/index.html
+++ b/statPlots.oct2015/index.html
@@ -115,6 +115,17 @@
   <i> (Made by oct_userInfo.R , 10.28.2015) </i>
 <p>
 
+  <h2>
+    --------- Number of invites sent 
+  </h2> 
+<p>
+
+<img src="numInvitesSent.png" alt="">
+
+<p>
+  <i> (Made by oct_userInfo.R , 11.2.2015) </i>
+<p>
+
   
   <hr>
 
